--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -16,7 +16,7 @@
 		cursor: pointer;
 	}
 
-	&:hover {
+	&:hover &:focus {
 		transform: translateY(-.3rem);
 		box-shadow: 0 1rem 2rem rgba($color-black, .2);
 
@@ -81,7 +81,7 @@
 		padding: 3px;
 		transition: all .2s;
 	}
-	&:hover {
+	&:hover &:focus {
 		background-color: $color-primary;
 		color: $color-white;
 		box-shadow: 0 1rem 2rem rgba($color-black, .15);
