--- a/sass/components/_compositions.scss
+++ b/sass/components/_compositions.scss
@@ -49,7 +49,7 @@
 			}
 		}
 
-		&:hover {
+		&:hover &:focus {
 			outline: 1.5rem solid $color-primary;
 			transform: scale(1.05) translateY(-.5rem);
 			box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
@@ -58,7 +58,7 @@
 	}
 
 	//this is to scale the image smaller when not hovered
-	&:hover &__photo:not(:hover) {
+	&:hover &:focus &__photo:not(:hover) {
 		transform: scale(.95);
 	}
 }
