--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body {
   @media (max-width: 37.5em) {
     .heading-secondary {
       font-size: 2.5rem; } }
-  .heading-secondary:hover .heading-secondary:focus {
+  .heading-secondary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
@@ -305,10 +305,10 @@ body {
     opacity: 0;
     transition: all .5s;
     backface-visibility: hidden; }
-  .story:hover .story:focus .story__caption {
+  .story:hover .story__caption {
     opacity: 1;
     transform: translate(-50%, -50%); }
-  .story:hover .story:focus .story__image {
+  .story:hover .story__image {
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(80%); }
 
@@ -339,9 +339,9 @@ body {
         background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
       .card__side--back-3 {
         background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
-  .card:hover .card:focus .card__side--front {
+  .card:hover .card__side--front {
     transform: rotateY(-180deg); }
-  .card:hover .card:focus .card__side--back {
+  .card:hover .card__side--back {
     transform: rotateY(0); }
   .card__picture {
     background-size: cover;
@@ -420,7 +420,7 @@ body {
         .card__side--back {
           transform: rotateY(0);
           clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); }
-      .card:hover .card:focus .card__side--front {
+      .card:hover .card__side--front {
         transform: rotateY(0); }
       .card__details {
         padding: 1rem 3rem; }
@@ -448,10 +448,10 @@ body {
   border: none;
   cursor: pointer; }
 
-.btn:hover .btn:focus {
+.btn:hover {
   transform: translateY(-0.3rem);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
-  .btn:hover .btn:focus::after {
+  .btn:hover::after {
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0; }
 
@@ -497,7 +497,7 @@ body {
   padding: 3px;
   transition: all .2s; }
 
-.btn-text:hover .btn-text:focus {
+.btn-text:hover {
   background-color: #55c57a;
   color: #fff;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
@@ -546,12 +546,12 @@ body {
           top: 1rem;
           left: 0;
           transform: scale(1.1); } }
-    .composition__photo:hover .composition__photo:focus {
+    .composition__photo:hover {
       outline: 1.5rem solid #55c57a;
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
-  .composition:hover .composition:focus .composition__photo:not(:hover) {
+  .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
 
 .feature-box {
@@ -577,7 +577,7 @@ body {
     @media (max-width: 56.25em) {
       .feature-box__icon {
         margin: 0; } }
-  .feature-box:hover .feature-box:focus {
+  .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
 .popup {
@@ -672,7 +672,7 @@ body {
     display: inline-block;
     transition: all .2s;
     line-height: 1; }
-  .popup__close:hover, .popup__close:focus {
+  .popup__close:hover {
     color: #55c57a; }
 
 .row {
@@ -787,7 +787,7 @@ body {
     text-transform: uppercase;
     display: inline-block;
     transition: all .2s; }
-  .footer__link:hover, .footer__link:focus, .footer__link:active {
+  .footer__link:hover, .footer__link:active {
     color: #55c57a;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
     transform: rotate(5deg) scale(1.3); }
@@ -881,7 +881,7 @@ body {
     margin-right: 1.5rem;
     display: inline-block; }
 
-.navigation__link:hover, .navigation__link:focus, .navigation__link:active {
+.navigation__link:hover, .navigation__link:active {
   background-position: 100%;
   color: #28b485;
   transform: translateX(1rem); }
@@ -911,10 +911,10 @@ body {
   .navigation__icon::after {
     top: .8rem; }
 
-.navigation__button:hover .navigation__button:focus .navigation__icon::before {
+.navigation__button:hover .navigation__icon::before {
   top: -1rem; }
 
-.navigation__button:hover .navigation__button:focus .navigation__icon::after {
+.navigation__button:hover .navigation__icon::after {
   top: 1rem; }
 
 .navigation__checkbox:checked + .navigation__button .navigation__icon {
@@ -938,6 +938,9 @@ body {
   @media (max-width: 75em) {
     .section-about {
       padding: 30rem 10rem 25rem 10rem; } }
+  @media (max-width: 37.5em) {
+    .section-about {
+      padding: 20rem 5rem 15rem 5rem; } }
 
 .section-features {
   padding: 25rem 0;
