--- a/css/style.css
+++ b/css/style.css
@@ -940,7 +940,7 @@ body {
       padding: 30rem 10rem 25rem 10rem; } }
   @media (max-width: 37.5em) {
     .section-about {
-      padding: 20rem 5rem 15rem 5rem; } }
+      padding: 20rem 5rem 20rem 5rem; } }
 
 .section-features {
   padding: 25rem 0;
@@ -967,6 +967,9 @@ body {
   @media (max-width: 75em) {
     .section-tours {
       padding: 40rem 5rem 10rem 5rem; } }
+  @media (max-width: 37.5em) {
+    .section-tours {
+      padding: 20rem 5rem 20rem 5rem; } }
 
 .section-stories {
   position: relative;
