--- a/css/style.css
+++ b/css/style.css
@@ -737,8 +737,8 @@ body {
   position: relative; }
   @media (max-width: 37.5em) {
     .header {
-      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 82%);
+      clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 82%); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -952,7 +952,8 @@ body {
       padding: 30rem 10rem 25rem 10rem; } }
   @media (max-width: 37.5em) {
     .section-about {
-      padding: 20rem 5rem 23rem 5rem; } }
+      padding: 20rem 3rem 23rem 3rem;
+      margin-top: -30rem; } }
 
 .section-features {
   padding: 25rem 0;
